--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="content">
             <h2>Mes projets</h2>
             <h3>Motion design</h3>
-                <a href="Lotus.html"><img onmouseover="this.src='medias/gif/Lotus.gif';"  onmouseout="this.src='medias/Lotus.JPG';"src="medias/lotus.JPG" alt="Lotus car" width="640" height="360"></a>
+                <a href="Lotus.html"><img onmouseover="this.src='medias/gif/Lotus.gif';"  onmouseout="this.src='medias/lotus.JPG';"src="medias/lotus.JPG" alt="Lotus car" width="640" height="360"></a>
                 <a href="Hud.html"><img onmouseover="this.src='medias/gif/Hud.gif';"  onmouseout="this.src='medias/Hud.jpg';"src="medias/Hud.jpg" alt="Hud" width="640" height="360"></a>
                 
             <h3>Court-métrages/Bande annonce</h3>    
