--- a/A propos.html
+++ b/A propos.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>New Vision</title>
+        <title>Augustin JACQUEL</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <link rel="stylesheet" href="style/Style.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -40,10 +40,10 @@
                 <img class="photo" src="medias/rendu%20adhd.png" alt="Photo de Profil">
                 <div class="desc">
                     <p>Bonjour,</p>
-                    <p>Je m'appelle Augustin JACQUEL, j'ai 19 ans passioné d'audiovisuel</p>
-                    <p>Je travailles principalement avec Première Pro, After Effects, Illustrator, Blender ainsi que Photoshop</p>
-                    <p>Je suis à la recherche de nouveau défis et découvrir de nouveaux domaines</p>
-                    <p>Je parles Français, Anglais et Espagnol.</p>
+                    <p>Je m'appelle Augustin JACQUEL, j'ai 19 ans, passioné par la vidéo et la musique.</p>
+                    <p>Je travaille principalement avec Première Pro, After Effects, Illustrator, Blender ainsi que Photoshop.</p>
+                    <p>Je suis à la recherche de nouveaux défis et découvrir de nouveaux domaines</p>
+                    <p>Je parle Français, Anglais et Espagnol.</p>
                 </div>
             </main>
             <div id="myNav" class="overlay">
