--- a/Dark Creation.html
+++ b/Dark Creation.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>New Vision</title>
+        <title>Augustin JACQUEL</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <link rel="stylesheet" href="style/Style.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -40,8 +40,8 @@
                 <img class="gif" src="medias/gif/Projet%20tut.gif" alt="Court-métrage">
                 <div class="desc">
                     <p>Aivy, victime du syndrome de la page blanche, peine à trouver une suite à sa bande-dessinée à succès "La Petite Momie". Un jour la petite momie en question prend vie sous ses yeux, apportant une nouvelle vague d'inspiration pour la jeune illustratrice qui ne se doute pas du cauchemar que va lui faire subir sa création.</p>
-                    <p>Ce projet à impliquer la réalisation de tout un plan communicationel ainsi que la gestion d'un budget et d'un financement.</p>
-                    <p>Durée : Projets tuteuré réaliser avec 5 autres étudiants sur 2 anées</p>
+                    <p>Ce projet à impliqué la réalisation de tout un plan communicationnel ainsi que la gestion d'un budget et d'un financement.</p>
+                    <p>Durée : Projet tuteuré réaliser avec 5 autres étudiants sur 2 années</p>
                     <p>Cible : Cœur cible sont les étudiants de Saint-Dié-des-Vosges. Cible secondaire amateur de court-métrage ainsi que les personnes résidant à Saint-Dié-des-Vosges.</p>
                     <p>Diffusion : Cinéma excelsior / Youtube</p>
                     <p>Techniques : Adobe Première Pro / Adobe After Effects / Dragon Frame (stop motion) / Adobe Illustrator / Fl Studio (musique)</p>
