--- a/Hud.html
+++ b/Hud.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>New Vision</title>
+        <title>Augustin JACQUEL</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <link rel="stylesheet" href="style/Style.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
                 <h2>Mettre en commun deux passions</h2>
                 <img class="gif" src="medias/gif/Hud.gif" alt="Hud">
                 <div class="desc">
-                    <p>L'idée : Réaliser et expérimenter le fonctionement d'un HUD (Head Up Display) qui est une une méthode par laquelle l'information est relayée graphiquement. Le concept était de réaliser une alerte qui apparaitrait sur un ordinateur avec une voix robotique ayant un accent espagnol pour contraster avec l'aspect dramatique de la chose</p>
+                    <p>L'idée : Réaliser et expérimenter le fonctionnement d'un HUD (Head Up Display) qui est une méthode par laquelle l'information est relayée graphiquement. Le concept était de réaliser une alerte qui apparaîtrait sur un ordinateur avec une voix robotique ayant un accent espagnol pour contraster avec l'aspect dramatique de la chose</p>
                     <p>Durée : 2 semaines</p>
                     <p>Cible : Projet d'école</p>
                     <p>Diffusion : Interne à l'école / youtube</p>
