--- a/Le retour de médée.html
+++ b/Le retour de médée.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>New Vision</title>
+        <title>Augustin JACQUEL</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <link rel="stylesheet" href="style/Style.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -39,10 +39,10 @@
                 <h2>Réalisation d'une bande annonce fictive</h2>
                 <img class="gif" src="medias/gif/bande%20annonce.gif" alt="Bande annonce">
                 <div class="desc">
-                    <p>Le retour du médée est une bande annonce reprenant le mythe de médée, pour l'implanté dans le monde moderne. </p>
-                    <p>Dans sa version classique, issue notamment de la tragédie d'Euripide et d' Apollonios de Rhodes, la légende de Médée, particulièrement sombre, est constituée d'une succession de meurtres ponctuée d'une série de fuites à travers la Grèce</p>
-                    <p>Ce projet à impliquer la rédaction de toutes l'histoire pour que notre bande annonce soit cohérente </p>
-                    <p>Durée : Projets réalisé avec 4 autres étudiants sur 2 mois</p>
+                    <p>Le retour de Médée est une bande annonce reprenant le mythe de Médée, pour l'implanter dans le monde moderne. </p>
+                    <p>Dans sa version classique, issue notamment de la tragédie d'Euripide et d'Apollonios de Rhodes, la légende de Médée, particulièrement sombre, est constituée d'une succession de meurtres ponctuée d'une série de fuites à travers la Grèce</p>
+                    <p>Ce projet à impliqué la rédaction de toute l'histoire pour que notre bande-annonce soit cohérente </p>
+                    <p>Durée : Projet réalisés avec 4 autres étudiants sur 2 mois</p>
                     <p>Cible : Projet d'école</p>
                     <p>Diffusion : Interne à l'école / Youtube</p>
                     <p>Techniques : Adobe Première Pro / Adobe After Effects </p>
