--- a/Licence Pro SARII.html
+++ b/Licence Pro SARII.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>New Vision</title>
+        <title>Augustin JACQUEL</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <link rel="stylesheet" href="style/Style.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -37,17 +37,17 @@
             <main>
                 <h1>Licence professionnelle SARII</h1>
                 <h2>Vidéo de présentation d'une licence professionnelle pour l'IUT de Saint-Dié-des-Vosges</h2>
-                <img class="gif" src="medias/gif/Interview-capsules-Augustin-S%C3%A9bastien-vf_Trim.gif" alt="Licence Pro">
+                <img class="gif" src="medias/gif/Interview-capsules.gif" alt="Licence Pro">
                 <div class="desc">
-                    <p>Le but de cette vidéo</p>
-                    <p>Dans sa version classique, issue notamment de la tragédie d'Euripide et d' Apollonios de Rhodes, la légende de Médée, particulièrement sombre, est constituée d'une succession de meurtres ponctuée d'une série de fuites à travers la Grèce</p>
-                    <p>Ce projet à impliquer la rédaction de toutes l'histoire pour que notre bande annonce soit cohérente </p>
-                    <p>Durée : Projets réalisé avec 4 autres étudiants sur 2 mois</p>
+                    <p>Le but de cette vidéo:</p>
+                    <p>Vidéo promotionnelle de la licence pro SARII</p>
+                    <p>Pour la réalisation de ce projet nous avons interviewé un étudiant pour qu'il nous raconte son parcours et comment se passe son alternance. L'idée est d'avoir un aperçu global sur la formation pour les futurs étudiants qui souhaiteraient intégrés cette école.</p>
+                    <p>Durée : Projet réalisés avec 1 autre étudiant sur 1 mois</p>
                     <p>Cible : Projet d'école</p>
                     <p>Diffusion : Interne à l'école / Youtube</p>
                     <p>Techniques : Adobe Première Pro / Adobe After Effects </p>
                 </div>
-                <iframe width="643" height="360" src="https://www.youtube.com/embed/OAJvx_5dYLI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="643" height="360" src="https://www.youtube.com/embed/AoDS66jcfi8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </main>
             <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
