--- a/Lotus.html
+++ b/Lotus.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>New Vision</title>
+        <title>Augustin JACQUEL</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <link rel="stylesheet" href="style/Style.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -39,11 +39,11 @@
                 <h2>Mettre en commun deux passions</h2>
                 <img class="gif" src="medias/gif/Lotus.gif" alt="Lotus car" width="640" height="360">
                 <div class="desc">
-                    <p>L'idée : Réaliser et raconter de manière originale l'histoire de la Lotus &#201;lise, un modèles qui a marquer la firme et a évoluer des années 90 jusqu'à nos jours, avec l'utilisation de motion-design tout au long de la vidéo</p>
+                    <p>L'idée : Réaliser et raconter de manière originale l'histoire de la Lotus &#201;lise, un modèle qui a marqué la firme et a évolué des années 90 jusqu'à nos jours, avec l'utilisation de motion-design tout au long de la vidéo.</p>
                     <p>Durée : En cours de réalisation</p>
                     <p>Cible : Grand Public / Fan d'Automobiles</p>
                     <p>Diffusion : Réseau sociaux (LinkedIn, Youtube)</p>
-                    <p>Techniques : Adobe Illustrator / Adobe After Effects</p>
+                    <p>Techniques : Adobe Illustrator / Adobe After Effects / Première Pro</p>
                 </div>
             </main>
             <div id="myNav" class="overlay">
