--- a/Suisse Romande.html
+++ b/Suisse Romande.html
@@ -39,7 +39,7 @@
                 <h2>Communication pour une équipe de E-Sport</h2>
                 <img class="gif" src="medias/gif/SR%20logo%20animation.gif" alt="Court-métrage">
                 <div class="desc">
-                    <p>Suisse Romande est une jeune équipe de E-Sport qui souhaitait améliorer son image avec un véritable logo qui lui correspond. Je leur ai donc réaliser deux propositions de logo ainsi qu'une animation de celui-ci pour avoir un aspect plus concret de la chose.</p>
+                    <p>Suisse Romande est une jeune équipe de E-Sport qui souhaitait améliorer son image avec un véritable logo qui lui correspond. Je leur ai donc réalisé deux propositions de logo ainsi qu'une animation de celui-ci pour avoir un aspect plus concret de la chose.</p>
                     <p>Pour les contraintes: <br>- Le logo devait se différencier des autres équipes<br>- Reprendre le nom de l'équipe ainsi que la croix Suisse. <br>- Une création originale (pas une reprise).</p>
                     <p>Durée : 2-3 semaines</p>
                     <p>Cible : Suisse Romande et sa communautée</p>
