--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 <a href="Dark%20Creation.html"><img onmouseover="this.src='medias/gif/Projet tut.gif';"  onmouseout="this.src='medias/Projet tut.jpg';"src="medias/Projet tut.jpg" alt="Court-Métrage" width="640" height="360"></a>
                 <a href="Le%20retour%20de%20m%C3%A9d%C3%A9e.html"><img onmouseover="this.src='medias/gif/bande%20annonce.gif';"  onmouseout="this.src='medias/bande%20annonce.jpg';"src="medias/bande%20annonce.jpg" alt="Court-Métrage" width="640" height="360"></a>
             <h3>Vidéo Promotionnelle</h3>
-                <a href="#"><img onmouseover="this.src='medias/gif/Interview-capsules-Augustin-Sébastien-vf_Trim.gif';"  onmouseout="this.src='medias/Interview-capsules-Augustin-Sébastien-vf_Trim.jpg';" src="medias/Interview-capsules-Augustin-S%C3%A9bastien-vf_Trim.jpg" alt="Licence pro promotion" width="640" height="360"></a>
+                <a href="Licence%20Pro%20SARII.html"><img onmouseover="this.src='medias/gif/Interview-capsules.gif';"  onmouseout="this.src='medias/Interview-capsules-Augustin-Sébastien-vf_Trim.jpg';" src="medias/Interview-capsules-Augustin-S%C3%A9bastien-vf_Trim.jpg" alt="Licence pro promotion" width="640" height="360"></a>
                 <a href="Suisse%20Romande.html"><img onmouseover="this.src='medias/gif/SR%20logo%20animation.gif';"  onmouseout="this.src='medias/logo loup v2.png';"src="medias/logo%20loup%20v2.png" alt="Logo animation" width="640" height="360"></a>
             <h3>Stop Motion</h3>
-                <a href="#"><img onmouseover="this.src='medias/gif/Stop%20motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>    
+                <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>    
         </div>
     </body>
 </html>
