--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 <a href="Licence%20Pro%20SARII.html"><img onmouseover="this.src='medias/gif/Interview-capsules.gif';"  onmouseout="this.src='medias/Interview-capsules-Augustin-Sébastien-vf_Trim.jpg';" src="medias/Interview-capsules-Augustin-S%C3%A9bastien-vf_Trim.jpg" alt="Licence pro promotion" width="640" height="360"></a>
                 <a href="Suisse%20Romande.html"><img onmouseover="this.src='medias/gif/SR%20logo%20animation.gif';"  onmouseout="this.src='medias/logo loup v2.png';"src="medias/logo%20loup%20v2.png" alt="Logo animation" width="640" height="360"></a>
             <h3>Stop Motion</h3>
-                <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>    
+                <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
+            <h3>Data-visualisation</h3>
+                <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><img src="medias/datavis.JPG" alt="Data-visualisation" width="640" height="360"></a>    
         </div>
     </body>
 </html>
