--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             }
         </script>
                             <!--Début du site-->
-        <div class="bck"></div>
+        <div class="bck">
+        </div>
         <div class="Titre"><h1>Augustin JACQUEL</h1></div>
         <svg onclick="topFunction()"class="cerclejaune" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 150">
             <g>
@@ -74,8 +75,41 @@
                 <a href="Suisse%20Romande.html"><img onmouseover="this.src='medias/gif/SR%20logo%20animation.gif';"  onmouseout="this.src='medias/logo loup v2.png';"src="medias/logo%20loup%20v2.png" alt="Logo animation" width="640" height="360"></a>
             <h3>Stop Motion</h3>
                 <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
+            <h3>Photographie</h3>
+                <div id="slider" >
+                    <figure>
+                        <img src="medias/P1000631.jpg" alt="nuit étoilée">
+                        <img src="medias/P1000632.jpg" alt="nuit étoilée">
+                        <img src="medias/P1000635.jpg" alt="nuit étoilée">
+                        <img src="medias/P1000636.jpg" alt="nuit étoilée">
+                        <img src="medias/P1000640.jpg" alt="nuit étoilée">
+                        <img src="medias/P1000643.jpg" alt="nuit étoilée">
+                    </figure>
+                </div>
+                <div id="slider" >
+                    <figure>
+                        <img src="medias/portfolio%20(1%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(2%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(3%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(4%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(5%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(6%20of%2012).jpg" alt="nuit étoilée">
+                    </figure>
+                </div>
+                <div id="slider" >
+                    <figure>
+                        <img src="medias/portfolio%20(7%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(8%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(9%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(10%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(11%20of%2012).jpg" alt="nuit étoilée">
+                        <img src="medias/portfolio%20(12%20of%2012).jpg" alt="nuit étoilée">
+                    </figure>
+                </div>
+                
             <h3>Data-visualisation</h3>
-                <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><img src="medias/datavis.JPG" alt="Data-visualisation" width="640" height="360"></a>    
+                <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><img src="medias/datavis.JPG" alt="Data-visualisation" width="640" height="360"></a>
+                
         </div>
     </body>
 </html>
