--- a/index.html
+++ b/index.html
@@ -76,40 +76,9 @@
             <h3>Stop Motion</h3>
                 <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
             <h3>Photographie</h3>
-                <div id="slider" >
-                    <figure>
-                        <img src="medias/P1000631.jpg" alt="nuit étoilée">
-                        <img src="medias/P1000632.jpg" alt="nuit étoilée">
-                        <img src="medias/P1000635.jpg" alt="nuit étoilée">
-                        <img src="medias/P1000636.jpg" alt="nuit étoilée">
-                        <img src="medias/P1000640.jpg" alt="nuit étoilée">
-                        <img src="medias/P1000643.jpg" alt="nuit étoilée">
-                    </figure>
-                </div>
-                <div id="slider" >
-                    <figure>
-                        <img src="medias/portfolio%20(1%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(2%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(3%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(4%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(5%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(6%20of%2012).jpg" alt="nuit étoilée">
-                    </figure>
-                </div>
-                <div id="slider" >
-                    <figure>
-                        <img src="medias/portfolio%20(7%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(8%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(9%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(10%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(11%20of%2012).jpg" alt="nuit étoilée">
-                        <img src="medias/portfolio%20(12%20of%2012).jpg" alt="nuit étoilée">
-                    </figure>
-                </div>
-                
+                <a href="Photographie.html"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
             <h3>Data-visualisation</h3>
                 <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><img src="medias/datavis.JPG" alt="Data-visualisation" width="640" height="360"></a>
-                
         </div>
     </body>
 </html>
