scroling bar and logo anim

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                 <a href="Suisse%20Romande.html"><img onmouseover="this.src='medias/gif/SR%20logo%20animation.gif';"  onmouseout="this.src='medias/logo loup v2.png';"src="medias/logo%20loup%20v2.png" alt="Logo animation" width="640" height="360"></a>
             <h3>Stop Motion</h3>
                 <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
+            <div class="wrapper">
+                <h3>Analyse Marketing</h3>
+                    <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><svg class="audi" viewBox="0 -20 196 110.25" style="width: 640px;" id="mySVG"><path  fill="none" stroke="#FFF" stroke-width="7" id="triangle" d="m34,4a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0z" /></svg></a>
+            </div>
             <h3>Photographie</h3>
                 <a href="Photographie.html"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
             <h3>Data-visualisation</h3>
