--- a/Audi.html
+++ b/Audi.html
@@ -39,7 +39,7 @@
                 <h2>Analyse des moyens de communication d’une marque</h2>
                 <div class="button">
                     <a href="https://www.youtube.com/watch?v=5Bo-D2aoD5g"><button type="button" >Lien vers la publicité vidéo</button></a>
-                    <button type="button" onclick="playMusic()">Lien vers la publicité audio</button></a>                    
+                    <button type="button" onclick="playMusic()">Lien vers la publicité audio</button>                  
                 </div> 
                 <script>
                 function playMusic(){
