--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
                 <a href="A%20propos.html">&Agrave; propos</a>
-                <a href="#">Projets</a>
+                <a href="index.html">Projets</a>
                 <a href="Contact.html">Contact</a>
             </div>
         </div>
@@ -76,8 +76,8 @@
             <h3>Stop Motion</h3>
                 <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
             <div class="wrapper">
-                <h3>Analyse Marketing</h3>
-                    <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><svg class="audi" viewBox="0 -20 196 110.25" style="width: 640px;" id="mySVG"><path  fill="none" stroke="#FFF" stroke-width="7" id="triangle" d="m34,4a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0z" /></svg></a>
+                <h3>Analyse Communicationnelle</h3>
+                    <a href="Audi.html"><svg class="audi" viewBox="0 -20 196 110.25" style="width: 640px;" id="mySVG"><path  fill="none" stroke="#FFF" stroke-width="7" id="triangle" d="m34,4a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0z" /></svg></a>
             </div>
             <h3>Photographie</h3>
                 <a href="Photographie.html"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
