--- a/A propos.html
+++ b/A propos.html
@@ -40,9 +40,11 @@
                 <img class="photo" src="medias/rendu%20adhd.png" alt="Photo de Profil">
                 <div class="desc">
                     <p>Bonjour,</p>
-                    <p>Je m'appelle Augustin JACQUEL, j'ai 19 ans, passioné par la vidéo et la musique.</p>
-                    <p>Je travaille principalement avec Première Pro, After Effects, Illustrator, Blender ainsi que Photoshop.</p>
-                    <p>Je suis à la recherche de nouveaux défis et découvrir de nouveaux domaines</p>
+                    <p>Je m'appelle Augustin JACQUEL, j'ai 20 ans et mon truc à moi, c'est la vidéo. J'ai comme passion la musique et l'automobile toute deux pouvant être utilisé pour la vidéo.</p>
+                    <p>Après un bac STI2D (Sciences et Technologies de l'Industrie et du Développement Durable) ITEC (Inovation Technologique et Eco-Conception) mention assez bien, je me suis dirigé vers un DUT MMI (Métier du Multimédia et de l'Internet) mention assez bien également. C'est grâce à cette formation que j'ai pu découvrir l'audiovisuel un monde vaste regorgeant de personnes créatives.</p>
+                    <p>Vous recherchez une personne capable d'être à <i><u>l'écoute</u></i> et de <i><u>répondre à vos besoins</u></i> alors n'attendez plus rencontrons et réalisons ainsi <i><u>l'irréalisable</u></i>.</p>
+                    <p>Je travaille principalement avec Première Pro, After Effects, Illustrator, Blender ainsi que Photoshop. Je filme avec une caméra Panasonic GH5.</p>
+                    <p></p>
                     <p>Je parle Français, Anglais et Espagnol.</p>
                 </div>
             </main>
@@ -58,7 +60,7 @@
             <div class="medias">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/augustin-jacquel"><img src="medias/social/linkedin.png" alt="Linkedin logo"></a></li>
-                    <li><a href="#"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCLsq03tmVhuRY-VeEt8p7TA"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
                     <li><a href="https://www.instagram.com/augjac88/"><img src="medias/social/Insta.png" alt="Instagram logo"></a></li>
                 </ul>
             </div>
