--- a/Audi.html
+++ b/Audi.html
@@ -130,7 +130,7 @@
             <div class="medias">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/augustin-jacquel"><img src="medias/social/linkedin.png" alt="Linkedin logo"></a></li>
-                    <li><a href="#"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCLsq03tmVhuRY-VeEt8p7TA"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
                     <li><a href="https://www.instagram.com/augjac88/"><img src="medias/social/Insta.png" alt="Instagram logo"></a></li>
                 </ul>
             </div>
