--- a/Dark Creation.html
+++ b/Dark Creation.html
@@ -39,10 +39,10 @@
                 <h2>Réalisation d'un court métrage un peu spécial</h2>
                 <img class="gif" src="medias/gif/Projet%20tut.gif" alt="Court-métrage">
                 <div class="desc">
-                    <p>Aivy, victime du syndrome de la page blanche, peine à trouver une suite à sa bande-dessinée à succès "La Petite Momie". Un jour la petite momie en question prend vie sous ses yeux, apportant une nouvelle vague d'inspiration pour la jeune illustratrice qui ne se doute pas du cauchemar que va lui faire subir sa création.</p>
-                    <p>Ce projet à impliqué la réalisation de tout un plan communicationnel ainsi que la gestion d'un budget et d'un financement.</p>
-                    <p>Durée : Projet tuteuré réaliser avec 5 autres étudiants sur 2 années</p>
-                    <p>Cible : Cœur cible sont les étudiants de Saint-Dié-des-Vosges. Cible secondaire amateur de court-métrage ainsi que les personnes résidant à Saint-Dié-des-Vosges.</p>
+                    <p>Aivy, victime du syndrome de la page blanche, peine à trouver une suite à sa bande-dessinée à succès "La Petite Momie". Un jour, la petite momie en question prend vie sous ses yeux, apportant une nouvelle vague d'inspiration pour la jeune illustratrice qui ne se doute pas du cauchemar que va lui faire subir sa création.</p>
+                    <p>Ce projet à impliqué la réalisation de tout un plan communicationnelle ainsi que la gestion d'un budget et d'un financement.</p>
+                    <p>Durée : Projet tuteuré réalisé avec 5 autres étudiants sur 2 années</p>
+                    <p>Cible : Le cœur de cible sont les étudiants de Saint-Dié-des-Vosges. Cible secondaire amateur de court-métrage ainsi que les personnes résidant à Saint-Dié-des-Vosges.</p>
                     <p>Diffusion : Cinéma excelsior / Youtube</p>
                     <p>Techniques : Adobe Première Pro / Adobe After Effects / Dragon Frame (stop motion) / Adobe Illustrator / Fl Studio (musique)</p>
                 </div>
@@ -60,7 +60,7 @@
             <div class="medias">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/augustin-jacquel"><img src="medias/social/linkedin.png" alt="Linkedin logo"></a></li>
-                    <li><a href="#"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCLsq03tmVhuRY-VeEt8p7TA"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
                     <li><a href="https://www.instagram.com/augjac88/"><img src="medias/social/Insta.png" alt="Instagram logo"></a></li>
                 </ul>
             </div>
