--- a/Licence Pro SARII.html
+++ b/Licence Pro SARII.html
@@ -41,7 +41,7 @@
                 <div class="desc">
                     <p>Le but de cette vidéo:</p>
                     <p>Vidéo promotionnelle de la licence pro SARII</p>
-                    <p>Pour la réalisation de ce projet nous avons interviewé un étudiant pour qu'il nous raconte son parcours et comment se passe son alternance. L'idée est d'avoir un aperçu global sur la formation pour les futurs étudiants qui souhaiteraient intégrés cette école.</p>
+                    <p>Pour la réalisation de ce projet, nous avons interviewé un étudiant pour qu'il nous raconte son parcours et comment se passe son alternance. L'idée est d'avoir un aperçu global sur la formation pour les futurs étudiants qui souhaiteraient intégrer cette école.</p>
                     <p>Durée : Projet réalisés avec 1 autre étudiant sur 1 mois</p>
                     <p>Cible : Projet d'école</p>
                     <p>Diffusion : Interne à l'école / Youtube</p>
@@ -61,7 +61,7 @@
             <div class="medias">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/augustin-jacquel"><img src="medias/social/linkedin.png" alt="Linkedin logo"></a></li>
-                    <li><a href="#"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCLsq03tmVhuRY-VeEt8p7TA"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
                     <li><a href="https://www.instagram.com/augjac88/"><img src="medias/social/Insta.png" alt="Instagram logo"></a></li>
                 </ul>
             </div>
