--- a/Lotus.html
+++ b/Lotus.html
@@ -35,16 +35,11 @@
             </div>
             <span class="bouton-menu" style="font-size:30px;cursor:pointer;color:#FFBA08" onclick="openNav()">&#9776;</span>
             <main>
-                <h1>L'histoire de la Lotus 	&#201;lise</h1>
-                <h2>Mettre en commun deux passions</h2>
+                <h1>Projets perso Motion design</h1>
                 <img class="gif" src="medias/gif/Lotus.gif" alt="Lotus car" width="640" height="360">
-                <div class="desc">
-                    <p>L'idée : Réaliser et raconter de manière originale l'histoire de la Lotus &#201;lise, un modèle qui a marqué la firme et a évolué des années 90 jusqu'à nos jours, avec l'utilisation de motion-design tout au long de la vidéo.</p>
-                    <p>Durée : En cours de réalisation</p>
-                    <p>Cible : Grand Public / Fan d'Automobiles</p>
-                    <p>Diffusion : Réseau sociaux (LinkedIn, Youtube)</p>
-                    <p>Techniques : Adobe Illustrator / Adobe After Effects / Première Pro</p>
-                </div>
+                <img class="gif" src="medias/gif/ball.gif" alt="Ball animation" width="640" height="360">
+                <img class="telgif" src="medias/gif/inteface%20t%C3%A9l%C3%A9phone.gif" alt="Interface téléphone" width="360" height="640">
+                
             </main>
             <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -58,7 +53,7 @@
             <div class="medias">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/augustin-jacquel"><img src="medias/social/linkedin.png" alt="Linkedin logo"></a></li>
-                    <li><a href="#"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCLsq03tmVhuRY-VeEt8p7TA"><img src="medias/social/youtube.png" alt="Youtube logo"></a></li>
                     <li><a href="https://www.instagram.com/augjac88/"><img src="medias/social/Insta.png" alt="Instagram logo"></a></li>
                 </ul>
             </div>
