--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="loader">
             <img class="boussole" src="medias/logo.png" alt="logo">
         </div>
+                            <!--Nav de la page-->
         <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
@@ -67,14 +68,18 @@
                 <a href="Lotus.html"><img onmouseover="this.src='medias/gif/Lotus.gif';"  onmouseout="this.src='medias/lotus.JPG';"src="medias/lotus.JPG" alt="Lotus car" width="640" height="360"></a>
                 <a href="Hud.html"><img onmouseover="this.src='medias/gif/Hud.gif';"  onmouseout="this.src='medias/Hud.jpg';"src="medias/Hud.jpg" alt="Hud" width="640" height="360"></a>
                 
-            <h3>Court-métrages/Bande annonce</h3>    
+            <h3>Court-métrages / Bande annonce / Clip Musical</h3>    
                 <a href="Dark%20Creation.html"><img onmouseover="this.src='medias/gif/Projet tut.gif';"  onmouseout="this.src='medias/Projet tut.jpg';"src="medias/Projet tut.jpg" alt="Court-Métrage" width="640" height="360"></a>
                 <a href="Le%20retour%20de%20m%C3%A9d%C3%A9e.html"><img onmouseover="this.src='medias/gif/bande%20annonce.gif';"  onmouseout="this.src='medias/bande%20annonce.jpg';"src="medias/bande%20annonce.jpg" alt="Court-Métrage" width="640" height="360"></a>
+                <a href="Ganggang.html"><img onmouseover="this.src='medias/gif/ganggang.gif';"  onmouseout="this.src='medias/ganggang.jpg';"src="medias/ganggang.jpg" alt="Clip Musical" width="640" height="360"></a>
             <h3>Vidéo Promotionnelle</h3>
                 <a href="Licence%20Pro%20SARII.html"><img onmouseover="this.src='medias/gif/Interview-capsules.gif';"  onmouseout="this.src='medias/Interview-capsules-Augustin-Sébastien-vf_Trim.jpg';" src="medias/Interview-capsules-Augustin-S%C3%A9bastien-vf_Trim.jpg" alt="Licence pro promotion" width="640" height="360"></a>
                 <a href="Suisse%20Romande.html"><img onmouseover="this.src='medias/gif/SR%20logo%20animation.gif';"  onmouseout="this.src='medias/logo loup v2.png';"src="medias/logo%20loup%20v2.png" alt="Logo animation" width="640" height="360"></a>
+                <a href="Bibliothèque Nancy.html"><img onmouseover="this.src='medias/gif/Biblioth%C3%A8que.gif';"  onmouseout="this.src='medias/Biblioth%C3%A8que.jpg';"src="medias/Biblioth%C3%A8que.jpg" alt="Logo animation" width="640" height="360"></a>
             <h3>Stop Motion</h3>
                 <a href="Stop%20Motion.html"><img onmouseover="this.src='medias/gif/Stop-motion.gif';"  onmouseout="this.src='medias/Stop%20motion.jpg';"src="medias/Stop%20motion.jpg" alt="Stop Motion" width="640" height="360"></a>
+            <h3>Infographie (Photo-montage, 3D, graphisme)</h3>
+                <a href="Infographie.html"><img src="medias/Infographie/C63%20pop-art.jpg" alt="C63%20pop-art" width="640" height="360"></a>
             <div class="wrapper">
                 <h3>Analyse Communicationnelle</h3>
                     <a href="Audi.html"><svg class="audi" viewBox="0 -20 196 110.25" style="width: 640px;" id="mySVG"><path  fill="none" stroke="#FFF" stroke-width="7" id="triangle" d="m34,4a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0zm42,0a30,30 0 1,0 2,0z" /></svg></a>
@@ -83,6 +88,6 @@
                 <a href="Photographie.html"><img src="medias/nuit%20%C3%A9toil%C3%A9e.JPG" alt="Nuit Etoilée" width="640" height="360"></a>
             <h3>Data-visualisation</h3>
                 <a href="Donn%C3%A9es_simple%20Augustin%20JACQUEL.html"><img src="medias/datavis.JPG" alt="Data-visualisation" width="640" height="360"></a>
-        </div>
+        </div> 
     </body>
 </html>
